fix: Corrected the issue where the calendar color picker was hiding behind the modal.

--- a/src/components/ModalWindow.css
+++ b/src/components/ModalWindow.css
@@ -1,5 +1,10 @@
 @import '../css/mixin.css';
 
+.ReactModalPortal {
+  position: relative;
+  z-index: 11;
+}
+
 .modal-window {
   @apply drop-shadow-xl;
   @apply rounded-md;
